--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "handlebars": "^4.0.5",
     "handlebars-loader": "^1.3.0"
+  },
+  "devDependencies": {
+    "webpack": "^1.13.1"
   }
 }
